// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test variables Chained encapsed vars 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
        "operator": "=",
        "right": Encapsed {
          "kind": "encapsed",
          "raw": "\\"{$a->foo()[$bar[$foo]]}\\"",
          "type": "string",
          "value": Array [
            EncapsedPart {
              "curly": true,
              "expression": OffsetLookup {
                "kind": "offsetlookup",
                "offset": OffsetLookup {
                  "kind": "offsetlookup",
                  "offset": Variable {
                    "byref": false,
                    "curly": false,
                    "kind": "variable",
                    "name": "foo",
                  },
                  "what": Variable {
                    "byref": false,
                    "curly": false,
                    "kind": "variable",
                    "name": "bar",
                  },
                },
                "what": Call {
                  "arguments": Array [],
                  "kind": "call",
                  "what": PropertyLookup {
                    "kind": "propertylookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "foo",
                    },
                    "what": Variable {
                      "byref": false,
                      "curly": false,
                      "kind": "variable",
                      "name": "a",
                    },
                  },
                },
              },
              "kind": "encapsedpart",
            },
          ],
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test variables Check errors should be ? 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "?",
        },
        "operator": "=",
        "right": Boolean {
          "kind": "boolean",
          "raw": "true",
          "value": true,
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [
    Error {
      "expected": Array [
        "{",
        "$",
        222,
      ],
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected '?' on line 1",
      "token": "'?'",
    },
  ],
  "kind": "program",
}
`;

exports[`Test variables Check errors should fail $foo->bar::! 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Identifier {
          "kind": "identifier",
          "name": "!",
        },
        "what": PropertyLookup {
          "kind": "propertylookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "bar",
          },
          "what": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "foo",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [
    Error {
      "expected": Array [
        105,
        222,
        "$",
        "{",
      ],
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected '!' on line 1",
      "token": "'!'",
    },
  ],
  "kind": "program",
}
`;

exports[`Test variables Check errors should fail foo::bar::baz 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Identifier {
          "kind": "identifier",
          "name": "baz",
        },
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "bar",
          },
          "what": ClassReference {
            "kind": "classreference",
            "name": "foo",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [
    Error {
      "expected": undefined,
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected '::' (T_DOUBLE_COLON) on line 1",
      "token": "'::' (T_DOUBLE_COLON)",
    },
  ],
  "kind": "program",
}
`;

exports[`Test variables Check errors should fail on double static lookup 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Identifier {
          "kind": "identifier",
          "name": "baz",
        },
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "bar",
          },
          "what": PropertyLookup {
            "kind": "propertylookup",
            "offset": Identifier {
              "kind": "identifier",
              "name": "foo",
            },
            "what": Identifier {
              "kind": "identifier",
              "name": ClassReference {
                "kind": "classreference",
                "name": "this",
                "resolution": "uqn",
              },
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [
    Error {
      "expected": undefined,
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected '::' (T_DOUBLE_COLON) on line 1",
      "token": "'::' (T_DOUBLE_COLON)",
    },
  ],
  "kind": "program",
}
`;

exports[`Test variables Check errors should fail on property lookup on static lookup 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": PropertyLookup {
        "kind": "propertylookup",
        "offset": Identifier {
          "kind": "identifier",
          "name": "baz",
        },
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "bar",
          },
          "what": PropertyLookup {
            "kind": "propertylookup",
            "offset": Identifier {
              "kind": "identifier",
              "name": "foo",
            },
            "what": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "this",
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [
    Error {
      "expected": undefined,
      "kind": "error",
      "line": 1,
      "message": "Parse Error : syntax error, unexpected '->' (T_OBJECT_OPERATOR) on line 1",
      "token": "'->' (T_OBJECT_OPERATOR)",
    },
  ],
  "kind": "program",
}
`;

exports[`Test variables Class constants 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "foo",
          },
          "what": StaticReference {
            "kind": "staticreference",
            "raw": "static",
          },
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "foo",
          },
          "what": SelfReference {
            "kind": "selfreference",
            "raw": "self",
          },
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "foo",
          },
          "what": ParentReference {
            "kind": "parentreference",
            "raw": "parent",
          },
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Identifier {
          "kind": "identifier",
          "name": "class",
        },
        "what": ClassReference {
          "kind": "classreference",
          "name": "foo",
          "resolution": "uqn",
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": PropertyLookup {
          "kind": "propertylookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "foo",
          },
          "what": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "this",
          },
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
        "what": ClassReference {
          "kind": "classreference",
          "name": "foo",
          "resolution": "uqn",
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "qux",
          },
          "what": OffsetLookup {
            "kind": "offsetlookup",
            "offset": String {
              "isDoubleQuote": true,
              "kind": "string",
              "raw": "\\"baz\\"",
              "unicode": false,
              "value": "baz",
            },
            "what": StaticLookup {
              "kind": "staticlookup",
              "offset": Identifier {
                "kind": "identifier",
                "name": "bar",
              },
              "what": PropertyLookup {
                "kind": "propertylookup",
                "offset": Identifier {
                  "kind": "identifier",
                  "name": "foo",
                },
                "what": Variable {
                  "byref": false,
                  "curly": false,
                  "kind": "variable",
                  "name": "this",
                },
              },
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test variables Dynamic variables 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "a",
          },
        },
        "operator": "=",
        "right": String {
          "isDoubleQuote": true,
          "kind": "string",
          "raw": "\\"bar\\"",
          "unicode": false,
          "value": "bar",
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "a",
            },
          },
        },
        "operator": "=",
        "right": String {
          "isDoubleQuote": true,
          "kind": "string",
          "raw": "\\"bar\\"",
          "unicode": false,
          "value": "bar",
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": true,
          "kind": "variable",
          "name": Bin {
            "kind": "bin",
            "left": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "a",
            },
            "right": String {
              "isDoubleQuote": true,
              "kind": "string",
              "raw": "\\"bar\\"",
              "unicode": false,
              "value": "bar",
            },
            "type": ".",
          },
        },
        "operator": "=",
        "right": String {
          "isDoubleQuote": true,
          "kind": "string",
          "raw": "\\"bar\\"",
          "unicode": false,
          "value": "bar",
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": OffsetLookup {
          "kind": "offsetlookup",
          "offset": Bin {
            "kind": "bin",
            "left": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "a",
            },
            "right": String {
              "isDoubleQuote": true,
              "kind": "string",
              "raw": "\\"bar\\"",
              "unicode": false,
              "value": "bar",
            },
            "type": ".",
          },
          "what": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "foo",
          },
        },
        "operator": "=",
        "right": String {
          "isDoubleQuote": true,
          "kind": "string",
          "raw": "\\"bar\\"",
          "unicode": false,
          "value": "bar",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test variables Encaps var offset 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
        "operator": "=",
        "right": Encapsed {
          "kind": "encapsed",
          "raw": "\\"{$a[1]}\\"",
          "type": "string",
          "value": Array [
            EncapsedPart {
              "curly": true,
              "expression": OffsetLookup {
                "kind": "offsetlookup",
                "offset": Number {
                  "kind": "number",
                  "value": "1",
                },
                "what": Variable {
                  "byref": false,
                  "curly": false,
                  "kind": "variable",
                  "name": "a",
                },
              },
              "kind": "encapsedpart",
            },
          ],
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
        "operator": "=",
        "right": Encapsed {
          "kind": "encapsed",
          "raw": "\\"{$a[\\"a\\"]}\\"",
          "type": "string",
          "value": Array [
            EncapsedPart {
              "curly": true,
              "expression": OffsetLookup {
                "kind": "offsetlookup",
                "offset": String {
                  "isDoubleQuote": true,
                  "kind": "string",
                  "raw": "\\"a\\"",
                  "unicode": false,
                  "value": "a",
                },
                "what": Variable {
                  "byref": false,
                  "curly": false,
                  "kind": "variable",
                  "name": "a",
                },
              },
              "kind": "encapsedpart",
            },
          ],
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
        "operator": "=",
        "right": Encapsed {
          "kind": "encapsed",
          "raw": "\\"{$a[$b]}\\"",
          "type": "string",
          "value": Array [
            EncapsedPart {
              "curly": true,
              "expression": OffsetLookup {
                "kind": "offsetlookup",
                "offset": Variable {
                  "byref": false,
                  "curly": false,
                  "kind": "variable",
                  "name": "b",
                },
                "what": Variable {
                  "byref": false,
                  "curly": false,
                  "kind": "variable",
                  "name": "a",
                },
              },
              "kind": "encapsedpart",
            },
          ],
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test variables Variable chains 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": OffsetLookup {
        "kind": "offsetlookup",
        "offset": Number {
          "kind": "number",
          "value": "2",
        },
        "what": OffsetLookup {
          "kind": "offsetlookup",
          "offset": Number {
            "kind": "number",
            "value": "1",
          },
          "what": StaticLookup {
            "kind": "staticlookup",
            "offset": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "a",
            },
            "what": ClassReference {
              "kind": "classreference",
              "name": "foo",
              "resolution": "uqn",
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test variables array destructuring 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": List {
          "items": Array [
            Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "id1",
            },
            Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "name1",
            },
          ],
          "kind": "list",
          "shortForm": true,
        },
        "operator": "=",
        "right": OffsetLookup {
          "kind": "offsetlookup",
          "offset": Number {
            "kind": "number",
            "value": "0",
          },
          "what": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "data",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test variables default variables 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "a",
        },
        "operator": "=",
        "right": String {
          "isDoubleQuote": true,
          "kind": "string",
          "raw": "\\"foo\\"",
          "unicode": false,
          "value": "foo",
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "b",
        },
        "operator": "=",
        "right": Variable {
          "byref": true,
          "curly": false,
          "kind": "variable",
          "name": "c",
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": PropertyLookup {
          "kind": "propertylookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "b",
          },
          "what": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "a",
          },
        },
        "operator": "=",
        "right": Boolean {
          "kind": "boolean",
          "raw": "true",
          "value": true,
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test variables fix #167 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": Call {
          "arguments": Array [],
          "kind": "call",
          "what": StaticLookup {
            "kind": "staticlookup",
            "offset": Literal {
              "kind": "literal",
              "value": OffsetLookup {
                "kind": "offsetlookup",
                "offset": String {
                  "isDoubleQuote": false,
                  "kind": "string",
                  "raw": "'baz'",
                  "unicode": false,
                  "value": "baz",
                },
                "what": Variable {
                  "byref": false,
                  "curly": false,
                  "kind": "variable",
                  "name": "bar",
                },
              },
            },
            "what": ClassReference {
              "kind": "classreference",
              "name": "Foo",
              "resolution": "uqn",
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": Call {
        "arguments": Array [],
        "kind": "call",
        "what": OffsetLookup {
          "kind": "offsetlookup",
          "offset": String {
            "isDoubleQuote": false,
            "kind": "string",
            "raw": "'baz'",
            "unicode": false,
            "value": "baz",
          },
          "what": StaticLookup {
            "kind": "staticlookup",
            "offset": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "bar",
            },
            "what": ClassReference {
              "kind": "classreference",
              "name": "Foo",
              "resolution": "uqn",
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test variables fix #185 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "foo",
          },
          "what": OffsetLookup {
            "kind": "offsetlookup",
            "offset": Number {
              "kind": "number",
              "value": "0",
            },
            "parenthesizedExpression": true,
            "what": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "var",
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "foo",
          },
          "what": OffsetLookup {
            "kind": "offsetlookup",
            "offset": Number {
              "kind": "number",
              "value": "1",
            },
            "parenthesizedExpression": true,
            "what": OffsetLookup {
              "kind": "offsetlookup",
              "offset": Number {
                "kind": "number",
                "value": "0",
              },
              "what": Variable {
                "byref": false,
                "curly": false,
                "kind": "variable",
                "name": "var",
              },
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "foo",
          },
          "what": OffsetLookup {
            "kind": "offsetlookup",
            "offset": Number {
              "kind": "number",
              "value": "1",
            },
            "what": OffsetLookup {
              "kind": "offsetlookup",
              "offset": Number {
                "kind": "number",
                "value": "0",
              },
              "parenthesizedExpression": true,
              "what": Variable {
                "byref": false,
                "curly": false,
                "kind": "variable",
                "name": "var",
              },
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "foo",
          },
          "what": OffsetLookup {
            "kind": "offsetlookup",
            "offset": Number {
              "kind": "number",
              "value": "1",
            },
            "parenthesizedExpression": true,
            "what": OffsetLookup {
              "kind": "offsetlookup",
              "offset": Number {
                "kind": "number",
                "value": "0",
              },
              "parenthesizedExpression": true,
              "what": Variable {
                "byref": false,
                "curly": false,
                "kind": "variable",
                "name": "var",
              },
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": Assign {
        "kind": "assign",
        "left": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "var",
        },
        "operator": "=",
        "right": StaticLookup {
          "kind": "staticlookup",
          "offset": Identifier {
            "kind": "identifier",
            "name": "bar",
          },
          "what": New {
            "arguments": Array [],
            "kind": "new",
            "parenthesizedExpression": true,
            "what": ClassReference {
              "kind": "classreference",
              "name": "Foo",
              "resolution": "uqn",
            },
          },
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "wrap",
        },
        "what": Call {
          "arguments": Array [
            PropertyLookup {
              "kind": "propertylookup",
              "offset": Identifier {
                "kind": "identifier",
                "name": "resource",
              },
              "what": Variable {
                "byref": false,
                "curly": false,
                "kind": "variable",
                "name": "this",
              },
            },
          ],
          "kind": "call",
          "what": ClassReference {
            "kind": "classreference",
            "name": "get_class",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test variables fix 248 - broken ast for \`$$$$$\` 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "property",
          },
        },
        "what": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Variable {
          "byref": false,
          "curly": true,
          "kind": "variable",
          "name": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "property",
          },
        },
        "what": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "foo",
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": PropertyLookup {
        "kind": "propertylookup",
        "offset": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "property",
          },
        },
        "what": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": PropertyLookup {
        "kind": "propertylookup",
        "offset": Literal {
          "kind": "literal",
          "value": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "property",
          },
        },
        "what": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test variables fix 248 - test curly 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": PropertyLookup {
        "kind": "propertylookup",
        "offset": Literal {
          "kind": "literal",
          "value": PropertyLookup {
            "kind": "propertylookup",
            "offset": Identifier {
              "kind": "identifier",
              "name": "foo",
            },
            "what": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "property",
            },
          },
        },
        "what": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": PropertyLookup {
        "kind": "propertylookup",
        "offset": Literal {
          "kind": "literal",
          "value": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "property",
          },
        },
        "what": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
      },
      "kind": "expressionstatement",
    },
    ExpressionStatement {
      "expression": PropertyLookup {
        "kind": "propertylookup",
        "offset": Encapsed {
          "kind": "encapsed",
          "type": "offset",
          "value": Array [
            Identifier {
              "kind": "identifier",
              "name": "foo_",
            },
            Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "property",
            },
          ],
        },
        "what": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": "bar",
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test variables fix 253 - can't be parsed \`global\` with multiple \`$\` 1`] = `
Program {
  "children": Array [
    Global {
      "items": Array [
        Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": "foo",
          },
        },
      ],
      "kind": "global",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test variables valid offset lookup 1`] = `
Program {
  "children": Array [
    ExpressionStatement {
      "expression": StaticLookup {
        "kind": "staticlookup",
        "offset": Variable {
          "byref": false,
          "curly": false,
          "kind": "variable",
          "name": Variable {
            "byref": false,
            "curly": false,
            "kind": "variable",
            "name": Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": Variable {
                "byref": false,
                "curly": false,
                "kind": "variable",
                "name": Variable {
                  "byref": false,
                  "curly": false,
                  "kind": "variable",
                  "name": "property",
                },
              },
            },
          },
        },
        "what": Call {
          "arguments": Array [
            Variable {
              "byref": false,
              "curly": false,
              "kind": "variable",
              "name": "var",
            },
          ],
          "kind": "call",
          "what": ClassReference {
            "kind": "classreference",
            "name": "get_class",
            "resolution": "uqn",
          },
        },
      },
      "kind": "expressionstatement",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
